--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">MovieWoody</string>
+
+    <array name="cities">
+
+        <item>Riyadh</item>
+        <item>Jeddah</item>
+        <item>Dammam</item>
+
+
+    </array>
+
 </resources>
